# procedural-script

./: 2dmain.py  README.md  bezier.py  noise.py  writeup.tex
docs/: Makefile  conf.py  index.rst
vtkm/: CMakeLists.txt  Makefile  README.md  bezier.cxx  cs.txt
writeup/: writeup.bib
